--- a/AnousithExpress.web.mvc/Views/Account/TrackItems.cshtml
+++ b/AnousithExpress.web.mvc/Views/Account/TrackItems.cshtml
@@ -140,7 +140,7 @@ else
                                 </table>
 
                             </div>
-                            <button type="button" onclick='window.location="@Url.Action("Index","Account")"' class="btn social btn-secondary btn-flat btn-addon ">ຄົ້ນຫາສີນຄ້າຕາມເລກຕິດຕາມ</button>
+                            <button type="button" onclick='window.location="@Url.Action("Index","Account")"' class="btn social btn-danger btn-flat btn-addon ">ຄົ້ນຫາສີນຄ້າຕາມເລກຕິດຕາມ</button>
                         </div>
                     </div>                   
                 </div>
