--- a/AnousithExpress.web.mvc/Views/Account/ULogin.cshtml
+++ b/AnousithExpress.web.mvc/Views/Account/ULogin.cshtml
@@ -50,7 +50,7 @@
                             <label>ລະຫັດຜ່ານ</label>
                             <input type="password" name="password" class="form-control" placeholder="ລະຫັດຜ່ານ">
                         </div>
-                        <button type="button" onclick="LogIn()" class="btn btn-success btn-flat m-b-30 m-t-30">ເຂົ້າສູ່ລະບົບ</button> 
+                        <button type="button" onclick="LogIn()" class="btn btn-danger btn-flat m-b-30 m-t-30">ເຂົ້າສູ່ລະບົບ</button> 
                         <hr />
                         <div class="register-link mt-3 text-center">
                             <p>ລ໋ອກອີນໃນສະຖານະລຸກຄ້າ <a href="@Url.Action("CLogin","Account")"> ກົດບ່ອນນີ້</a></p>
