--- a/AnousithExpress.web.mvc/Views/Admin/ItemsDetail.cshtml
+++ b/AnousithExpress.web.mvc/Views/Admin/ItemsDetail.cshtml
@@ -80,6 +80,16 @@
                                         <td style="font-weight:bolder;width:50%;">ເບີໂທຜູ້ຮັບ</td>
                                         <td>@Model.CustomerPhonenumber</td>
                                     </tr>
+                                    <tr>
+                                        <td style="font-weight:bolder;width:50%;">ພະນັກງານຮັບ</td>
+                                        <td>@Model.PickUpBy</td>
+                                    </tr>
+
+                                    <tr>
+                                        <td style="font-weight:bolder;width:50%;">ພະນັກງານສົ່ງ</td>
+                                        <td>@Model.SentBy</td>
+                                    </tr>
+
                                 </table>
                             </div>
                         </div>
