--- a/AnousithExpress.web.mvc/Views/Customer/ProfileDetail.cshtml
+++ b/AnousithExpress.web.mvc/Views/Customer/ProfileDetail.cshtml
@@ -64,10 +64,10 @@
                 </div>
             </div>
             <div class="card-footer text-center">
-                <button type="button" onclick='window.location="@Url.Action("ProfileUpdate","Customer")"' class="btn btn-warning col-sm-5 mb-1">
+                <button type="button" onclick='window.location="@Url.Action("ProfileUpdate","Customer")"' class="btn btn-danger col-sm-5 mb-1">
                     <i class="fa fa-dot-circle-o"></i> ປ່ຽນແປງ
                 </button>
-                <button type="button" onclick='window.location ="@Url.Action("Index","Customer")"' class="btn btn-info  col-sm-5 mb-1">
+                <button type="button" onclick='window.location ="@Url.Action("Index","Customer")"' class="btn btn-danger  col-sm-5 mb-1">
                     <i class="fa fa-backward"></i> ກັບໄປຫນ້າຫລັກ
                 </button>
             </div>
