--- a/AnousithExpress.web.mvc/Views/Admin/ConsolidateAllConsolidate.cshtml
+++ b/AnousithExpress.web.mvc/Views/Admin/ConsolidateAllConsolidate.cshtml
@@ -29,7 +29,7 @@
                 <div class="col-md-12">
                     <div class="card">
                         <div class="card-header">
-                            <button class="btn btn-primary w-50" onclick="goToRerpot()" >ພີມລາຍງານ</button>
+                            @*<button class="btn btn-primary w-50" onclick="goToRerpot()" >ພີມລາຍງານ</button>*@
                         </div>
                         <div class="card-body ">
                             <div class="row">
@@ -46,15 +46,46 @@
 
                                 </div>
                             </div>
+                            <div class="row">
+                                <div class="col text-center">
+                                    <table class="table">
+                                        <tr>
+                                            <td style="width:50%;">ລວມຄ່າບໍລິການ(ກີບ)</td>
+                                            <td style="width:50%;" id="serviceFee"></td>
+
+                                        </tr>
+                                        <tr>
+                                            <td style="width:50%;">ລວມເງີນກີບທີ່ຮັບມາ</td>
+                                            <td style="width:50%;" id="totalKip"></td>
+
+                                        </tr>
+                                        <tr>
+                                            <td style="width:50%;">ລວມເງີນບາດທີ່ຮັບມາ</td>
+                                            <td style="width:50%;" id="totalBaht"></td>
+
+
+                                        </tr>
+                                        <tr>
+                                            <td style="width:50%;">ລວມເງີນໂດລາທີ່ຮັບມາ</td>
+                                            <td style="width:50%;" id="totalDollar"></td>
+
+                                        </tr>
+                                    </table>
+                                </div>
+                               
+                            </div>
 
                             <table id="itemDataTable" class="table table-striped table-bordered" style="width:100%;white-space:nowrap;">
                                 <thead>
                                     <tr>
                                         <th>ເລກສັງລວມ</th>
-                                        <th>ເລກບັນຊີ</th>
+                                        <th>ເລກລຸກຄ້າ</th>
                                         <th>ຊື່ລຸກຄ້າ</th>
                                         <th>ຈຳນວນສີນຄ້າ</th>
                                         <th>ຄ່າບໍລິການ</th>
+                                        <th>ເງີນທີຮັບມາເປັນກີບ</th>
+                                        <th>ເງີນທີຮັບມາເປັນບາດ</th>
+                                        <th>ເງີນທີຮັບມາເປັນໂດລາ</th>
                                         <th>ວັນທີສັງລວມ</th>
                                         <th></th>
                                     </tr>
@@ -124,7 +155,25 @@
             //    dateFormat: 'dd/mm/yy'
             //});
             consoleTable();
+            consolidationCount();
         });
+        function consolidationCount() {
+            jQuery.ajax({
+                url: "/Admin/ConsolidationAllCount",
+                data: {
+                    fromDate: jQuery("input[name='fromDate']").val() || null,
+                    toDate: jQuery("input[name='toDate']").val() || null
+                },
+                datatype: "json",
+                type: "POST",
+                success: function (r) {
+                    jQuery("#serviceFee").html(r.fee + ' ກີບ');
+                    jQuery("#totalKip").html(r.kip + ' ກີບ');
+                    jQuery("#totalBaht").html(r.baht + ' ບາດ');
+                    jQuery("#totalDollar").html(r.dollar + ' ໂດລາ');
+                }
+            });
+        }
         function goToRerpot() {
             window.location = '@Url.Action("ConsolidationAllReport","Admin")?fromDate=' + jQuery("#fromDate").val() + '&toDate=' + jQuery("#toDate").val();
         }
@@ -148,10 +197,13 @@
                 columns: [
                     
                     { data: "ConsolidateNumber", name: "ConsolidateNumber" },
-                    { data: "CustomerId", name:"CustomerId"},
+                    { data: "CustomerId", name: "CustomerId"},
                     { data: "CustomerName", name: "CustomerName" },
                     { data: "AmountOfItem", name: "AmountOfItem" },                    
                     { data: "Fee", name: "Fee" },
+                    { data: "IncomingBalanceInKip", name: "IncomingBalanceInKip" },
+                    { data: "IncomingBalanceInBaht", name: "IncomingBalanceInDollar" },
+                    { data: "IncomingBalanceInDollar", name:"IncomingBalanceInDollar"},
                     { data: "ConsolidatedDate", name: "ConsolidatedDate" },
                     {
                         data: "Id", render: function (data, type, full, meta) {
@@ -172,6 +224,7 @@
         function searchByDate(source) {
             consolidateAllTable.ajax.reload(null, false);
             jQuery(source).datepicker('hide');
+            consolidationCount();
         }
 
         function openDetail(id) {
