--- a/AnousithExpress.web.mvc/Views/Admin/CustomerHistoryView.cshtml
+++ b/AnousithExpress.web.mvc/Views/Admin/CustomerHistoryView.cshtml
@@ -1,94 +1,102 @@
-﻿
-<div class="animated fadeIn">
-    <div class="row">
-        <div class="col-md-12">
-            <div class="card">
+﻿@{
+    if (Session["Role"] != null)
+    {
+        if (Session["Role"].ToString() != "1" && Session["Role"].ToString() != "2")
+        {
 
-                <div class="card-body ">
-                    <div class="row">
-                        <div class="col-6">
-                            <label>ຈາກວັນທີສົ່ງ</label>
-                            @{
-                                if (ViewBag.fromDate != null)
-                                {
-                                    <input type="text" value="@ViewBag.fromDate" placeholder="ວັນ-ເດືອນ-ປີ" class="w-100" name="fromDate" readonly="readonly" onchange="searchByDate(this)" />
+        }
+        else
+        {
+            <div class="animated fadeIn">
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="card">
 
-                                }
-                                else
-                                {
-                                    <input type="text" placeholder="ວັນ-ເດືອນ-ປີ" class="w-100" name="fromDate" readonly="readonly" onchange="searchByDate(this)" />
+                            <div class="card-body ">
+                                <div class="row">
+                                    <div class="col-6">
+                                        <label>ຈາກວັນທີສົ່ງ</label>
+                                        @{
+                                            if (ViewBag.fromDate != null)
+                                            {
+                                                <input type="text" value="@ViewBag.fromDate" placeholder="ວັນ-ເດືອນ-ປີ" class="w-100" name="fromDate" readonly="readonly" onchange="searchByDate(this)" />
 
-                                }
+                                            }
+                                            else
+                                            {
+                                                <input type="text" placeholder="ວັນ-ເດືອນ-ປີ" class="w-100" name="fromDate" readonly="readonly" onchange="searchByDate(this)" />
 
-                            }
+                                            }
+
+                                        }
 
 
+                                    </div>
+                                    <div class="col-6 horizontal">
+
+                                        <label>ຫາວັນທີສົ່ງ</label>
+                                        @{
+                                            if (ViewBag.toDate != null)
+                                            {
+                                                <input type="text" value="@ViewBag.toDate" placeholder="ວັນ-ເດືອນ-ປີ" class="w-100" name="toDate" readonly="readonly" onchange="searchByDate(this)" />
+
+                                            }
+                                            else
+                                            {
+                                                <input type="text" placeholder="ວັນ-ເດືອນ-ປີ" class="w-100" name="toDate" readonly="readonly" onchange="searchByDate(this)" />
+
+                                            }
+                                        }
+
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col text-center" style="vertical-align:middle;">
+                                        <table class="table" style="width:75%;margin-left:auto;margin-right:auto">
+                                            <tr>
+                                                <td style="width:50%;">ຈຳນວນເຄື່ອງສົ່ງທັງຫມົດ</td>
+                                                <td style="width:50%;" id="totalNumber"></td>
+                                            </tr>
+                                            <tr>
+                                                <td style="width:50%;">ຈຳນວນເຄື່ອງສົ່ງຮອດປາຍທາງ</td>
+                                                <td style="width:50%;" id="totalSuccess"></td>
+                                            </tr>
+                                            <tr>
+                                                <td style="width:50%;">ຈຳນວນເຄື່ອງສົ່ງກັບຄືນ</td>
+                                                <td style="width:50%;" id="totalFailure"></td>
+                                            </tr>
+
+                                        </table>
+                                    </div>
+                                </div>
+                                <div class="table-responsive">
+                                    <table id="itemDataTable" class="table table-striped table-bordered" style="width:100%;white-space:nowrap;">
+                                        <thead>
+                                            <tr>
+                                                <th class="control">ເລກຕິດຕາມ</th>
+                                                <th class="control">ປະເພດສີນຄ້າ</th>
+                                                <th class="control">ສະຖານະ</th>
+                                                <th>ຊື່ຜູ້ຮັບ</th>
+                                                <th>ເບີໂທຜູ້ຮັບ</th>
+                                                <th>ທີ່ຢູ່ຜູ້ຮັບ</th>
+                                                <th>ມື້ສົ່ງ</th>
+                                                <th>ມື້ມອບເຄື່ອງ</th>
+                                                <th>ເກັບເງິນປາຍທາງ</th>
+                                                <th class="control">ຝັງຊັ້ນ</th>
+                                            </tr>
+                                        </thead>
+
+                                    </table>
+                                </div>
+
+                            </div>
                         </div>
-                        <div class="col-6 horizontal">
-
-                            <label>ຫາວັນທີສົ່ງ</label>
-                            @{
-                                if (ViewBag.toDate != null)
-                                {
-                                    <input type="text" value="@ViewBag.toDate" placeholder="ວັນ-ເດືອນ-ປີ" class="w-100" name="toDate" readonly="readonly" onchange="searchByDate(this)" />
-
-                                }
-                                else
-                                {
-                                    <input type="text" placeholder="ວັນ-ເດືອນ-ປີ" class="w-100" name="toDate" readonly="readonly" onchange="searchByDate(this)" />
-
-                                }
-                            }
-
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col text-center" style="vertical-align:middle;">
-                            <table class="table" style="width:75%;margin-left:auto;margin-right:auto">
-                                <tr>
-                                    <td style="width:50%;">ຈຳນວນເຄື່ອງສົ່ງທັງຫມົດ</td>
-                                    <td style="width:50%;" id="totalNumber"></td>
-                                </tr>
-                                <tr>
-                                    <td style="width:50%;">ຈຳນວນເຄື່ອງສົ່ງຮອດປາຍທາງ</td>
-                                    <td style="width:50%;" id="totalSuccess"></td>
-                                </tr>
-                                <tr>
-                                    <td style="width:50%;">ຈຳນວນເຄື່ອງສົ່ງກັບຄືນ</td>
-                                    <td style="width:50%;" id="totalFailure"></td>
-                                </tr>
-
-                            </table>
-                        </div>
-                    </div>
-                    <div class="table-responsive">
-                        <table id="itemDataTable" class="table table-striped table-bordered" style="width:100%;white-space:nowrap;">
-                            <thead>
-                                <tr>
-                                    <th class="control">ເລກຕິດຕາມ</th>
-                                    <th class="control">ປະເພດສີນຄ້າ</th>
-                                    <th class="control">ສະຖານະ</th>
-                                    <th>ຊື່ຜູ້ຮັບ</th>
-                                    <th>ເບີໂທຜູ້ຮັບ</th>
-                                    <th>ທີ່ຢູ່ຜູ້ຮັບ</th>
-                                    <th>ມື້ສົ່ງ</th>
-                                    <th>ມື້ມອບເຄື່ອງ</th>
-                                    <th>ເກັບເງິນປາຍທາງ</th>
-                                    <th class="control">ຝັງຊັ້ນ</th>
-                                </tr>
-                            </thead>
-
-                        </table>
                     </div>
 
                 </div>
-            </div>
-        </div>
+            </div><!-- .animated -->
 
-    </div>
-</div><!-- .animated -->
-
-<script>
+            <script>
     var sentItemTable;
     jQuery(document).ready(
         function () {
@@ -102,7 +110,7 @@
             jQuery("input[name='toDate']").datepicker({
                 language: 'la'
             });
-            
+
         }
     );
 
@@ -195,4 +203,8 @@
 
     }
 
-</script>
+            </script>
+
+        }
+    }
+}
