--- a/AnousithExpress.web.mvc/Views/Admin/CustomerProfile.cshtml
+++ b/AnousithExpress.web.mvc/Views/Admin/CustomerProfile.cshtml
@@ -1,60 +1,69 @@
 ﻿
 @model AnousithExpress.DataEntry.ViewModels.Customer.CustomerProfileItemsModel
-<div class="card">   
-    <div class="card-body card-block text-center">
-        <div class="row">
-            <div class="col-md-2"></div>
-            <div class="col-md-offset-4 col-md-8 col-sm-12">
-                <table class="table " style="width:100%;">
-                    <tr>
-                        <td style="width:50%;"><strong>ຊື່ ແລະ ນາມສະກຸນ: </strong></td>
-                        <td style="width:50%;">@Model.Profile.Name</td>
-                    </tr>
-                    <tr>
-                        <td style="width:50%;"><strong>ເບີໂທລະສັບ: </strong></td>
-                        <td style="width:50%;">@Model.Profile.Phonenumber</td>
-                    </tr>
-                    <tr>
-                        <td style="width:50%;"><strong>ສະຖານະ: </strong></td>
-                        <td style="width:50%;">@Model.Profile.Status</td>
-                    </tr>
-                    <tr>
-                        <td style="width:50%;"><strong>ທີ່ຢູ່: </strong></td>
-                        <td style="width:50%;">@Model.Profile.Address</td>
-                    </tr>
-                    <tr>
-                        <td style="width:50%;"><strong>ເລກບັນຊີເງິນກີບ:</strong></td>
-                        <td style="width:50%;">@Model.Profile.BCEL_Kip</td>
-                    </tr>
-                    <tr>
-                        <td style="width:50%;"><strong>ເລກບັນຊີເງິນບາດ:</strong></td>
-                        <td style="width:50%;">@Model.Profile.BCEL_Baht</td>
-                    </tr>
-                    <tr>
-                        <td style="width:30%;"><strong>ເລກບັນຊີເງິນໂດລາ:</strong></td>
-                        <td style="width:70%;">@Model.Profile.BCEL_Dollar</td>
-                    </tr>
-                </table>
+@{
+    if (Session["Role"] != null)
+    {
+        if (Session["Role"].ToString() != "1" && Session["Role"].ToString() != "2")
+        {
 
+        }
+        else
+        {
+            <div class="card">
+                <div class="card-body card-block text-center">
+                    <div class="row">
+                        <div class="col-md-2"></div>
+                        <div class="col-md-offset-4 col-md-8 col-sm-12">
+                            <table class="table " style="width:100%;">
+                                <tr>
+                                    <td style="width:50%;"><strong>ຊື່ ແລະ ນາມສະກຸນ: </strong></td>
+                                    <td style="width:50%;">@Model.Profile.Name</td>
+                                </tr>
+                                <tr>
+                                    <td style="width:50%;"><strong>ເບີໂທລະສັບ: </strong></td>
+                                    <td style="width:50%;">@Model.Profile.Phonenumber</td>
+                                </tr>
+                                <tr>
+                                    <td style="width:50%;"><strong>ສະຖານະ: </strong></td>
+                                    <td style="width:50%;">@Model.Profile.Status</td>
+                                </tr>
+                                <tr>
+                                    <td style="width:50%;"><strong>ທີ່ຢູ່: </strong></td>
+                                    <td style="width:50%;">@Model.Profile.Address</td>
+                                </tr>
+                                <tr>
+                                    <td style="width:50%;"><strong>ເລກບັນຊີເງິນກີບ:</strong></td>
+                                    <td style="width:50%;">@Model.Profile.BCEL_Kip</td>
+                                </tr>
+                                <tr>
+                                    <td style="width:50%;"><strong>ເລກບັນຊີເງິນບາດ:</strong></td>
+                                    <td style="width:50%;">@Model.Profile.BCEL_Baht</td>
+                                </tr>
+                                <tr>
+                                    <td style="width:30%;"><strong>ເລກບັນຊີເງິນໂດລາ:</strong></td>
+                                    <td style="width:70%;">@Model.Profile.BCEL_Dollar</td>
+                                </tr>
+                            </table>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="card-footer text-center">
+                    <button type="button" onclick='window.location="@Url.Action("CustomerProfileDetail","Admin", new {customerId= Model.Profile.Id })"' class="btn btn-warning col-sm-5 mb-1">
+                        <i class="fa fa-dot-circle-o"></i> ປ່ຽນແປງ
+                    </button>
+                    <button type="button" onclick='updateItemDialog(@Model.Profile.Id)' class="btn btn-warning col-sm-5 mb-1">
+                        <i class="fa fa-plus"></i> ສ້າງລາຍການສີນຄ້າ
+                    </button>
+                    <button type="button" onclick='window.location ="@Url.Action("Index","Admin")"' class="btn btn-info  col-sm-5 mb-1">
+                        <i class="fa fa-backward"></i> ກັບໄປຫນ້າຫລັກ
+                    </button>
+                </div>
             </div>
-        </div>
-    </div>
-    <div class="card-footer text-center">
-        <button type="button" onclick='window.location="@Url.Action("CustomerProfileDetail","Admin", new {customerId= Model.Profile.Id })"' class="btn btn-warning col-sm-5 mb-1">
-            <i class="fa fa-dot-circle-o"></i> ປ່ຽນແປງ
-        </button>
-        <button type="button" onclick='updateItemDialog(@Model.Profile.Id)' class="btn btn-warning col-sm-5 mb-1">
-            <i class="fa fa-plus"></i> ສ້າງລາຍການສີນຄ້າ
-        </button>
-        <button type="button" onclick='window.location ="@Url.Action("Index","Admin")"' class="btn btn-info  col-sm-5 mb-1">
-            <i class="fa fa-backward"></i> ກັບໄປຫນ້າຫລັກ
-        </button>
-    </div>
-</div>
 
-<script>
+            <script>
     function updateItemDialog(id) {
-       
+
         jQuery.ajax({
             url: "/Admin/CreateUpdateUpdateItemDetailPage",
             data: { itemId: 0, customerId: '@Model.Profile.Id'},
@@ -71,10 +80,10 @@
         });
     }
     function saveItem() {
-      
+
          jQuery.ajax({
              url: "/Admin/CreateUpdateItemFunction",
-             
+
              data: jQuery("#itemAdminForm").serialize() + '&customerId= ' + '@Model.Profile.Id',
              datatype: "json",
              type: "POST",
@@ -86,7 +95,7 @@
                     jQuery("#modalButton2").html(htmlButton);
                     jQuery("#modal2").modal('show');
                     jQuery("#modal3").modal("hide");
-                    
+
                 }
                 else {
                     let htmlButton = '';
@@ -99,4 +108,7 @@
             }
         });
     }
-</script>
+            </script>
+        }
+    }
+}
