--- a/AnousithExpress.web.mvc/Views/Admin/ScanBarCodeItemReturn.cshtml
+++ b/AnousithExpress.web.mvc/Views/Admin/ScanBarCodeItemReturn.cshtml
@@ -3,131 +3,143 @@
     ViewBag.Title = "ສະແກນເຄື່ອງສົ່ງກັບ";
     Layout = "~/Views/Shared/_CustomerLayout.cshtml";
 }
-<div class="breadcrumbs">
-    <div class="col-sm-4">
-        <div class="page-header float-left">
-            <div class="page-title">
+@{
+    if (Session["Role"] != null)
+    {
+        if (Session["Role"].ToString() != "1" && Session["Role"].ToString() != "5")
+        {
 
-            </div>
-        </div>
-    </div>
-    <div class="col-sm-8">
-        <div class="page-header float-right">
-            <div class="page-title">
-                <ol class="breadcrumb text-right">
-                    <li><a href="@Url.Action("Index","Admin")">ຫນ້າຫລັກ</a></li>
-                    <li><a href="@Url.Action("ScanBarCode","Admin")">ສະແກນສີນຄ້າ</a></li>
-                    <li class="active">@ViewData["Title"]</li>
-                </ol>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="container" id="containerResize">
-    <div class="content mt-3">
-        <div class="animated fadeIn">
-            <div class="row">
-                <div class="col-md-12">
-                    <div class="card">
-                        <div class="card-header">
-                            <strong class="card-title">ເຄື່ອງສົ່ງກັບ</strong>
+        }
+        else
+        {
+            <div class="breadcrumbs">
+                <div class="col-sm-4">
+                    <div class="page-header float-left">
+                        <div class="page-title">
+
                         </div>
-                        <div class="card-body ">
-                            <div class="row">
-                                <div class="col">
-                                    <input type="text" style="text-align:center;" class="form-control" name="barcodeText" id="barcodeText" onblur="jQuery(this).focus()" />
-                                </div>
-                            </div>
-                            <div class="table-responsive">
-                                <table id="userDataTable" class="table table-striped table-bordered nowarp" style="width:100%;white-space:nowrap;">
-                                    <thead>
-                                        <tr>
-                                            <th>ເລກຕິດຕາມ</th>
-                                            <th>ປະເພດສີນຄ້າ</th>
-                                            <th>ສະຖານະ</th>
-                                            <th>ມື້ສົ່ງສີນຄ້າ</th>
-                                            <th>ຊື່ລຸກຄ້າ</th>
-                                            <th>ເບີໂທລຸກຄ້າ</th>
-                                            <th>ຊື່ຜູ້ຮັບ</th>
-                                            <th>ເບີໂທຜູ້ຮັບ</th>
-                                            <th>ທີ່ຢູ່ຜູ້ຮັບ</th>
-                                            <th>ເກັບເງີປາຍທາງ</th>
-                                        </tr>
-                                    </thead>
-                                    <tbody id="tableBody"></tbody>
-                                </table>
-                            </div>
+                    </div>
+                </div>
+                <div class="col-sm-8">
+                    <div class="page-header float-right">
+                        <div class="page-title">
+                            <ol class="breadcrumb text-right">
+                                <li><a href="@Url.Action("Index","Admin")">ຫນ້າຫລັກ</a></li>
+                                <li><a href="@Url.Action("ScanBarCode","Admin")">ສະແກນສີນຄ້າ</a></li>
+                                <li class="active">@ViewData["Title"]</li>
+                            </ol>
                         </div>
                     </div>
                 </div>
             </div>
-        </div><!-- .animated -->
-    </div><!-- .content -->
-</div>
-<div class="modal fade" role="dialog" id="modal1">
-    <div class="modal-dialog modal-dialog-centered">
-        <div class="modal-content">
-            <div class="modal-header"></div>
-            <div class="modal-body">
-                <strong>ບໍ່ມີສີນຄ້າຕາມເລກຕິດຕາມດັ່ງກ່າວ</strong>
+            <div class="container" id="containerResize">
+                <div class="content mt-3">
+                    <div class="animated fadeIn">
+                        <div class="row">
+                            <div class="col-md-12">
+                                <div class="card">
+                                    <div class="card-header">
+                                        <strong class="card-title">ເຄື່ອງສົ່ງກັບ</strong>
+                                    </div>
+                                    <div class="card-body ">
+                                        <div class="row">
+                                            <div class="col">
+                                                <input type="text" style="text-align:center;" class="form-control" name="barcodeText" id="barcodeText" onblur="jQuery(this).focus()" />
+                                            </div>
+                                        </div>
+                                        <div class="table-responsive">
+                                            <table id="userDataTable" class="table table-striped table-bordered nowarp" style="width:100%;white-space:nowrap;">
+                                                <thead>
+                                                    <tr>
+                                                        <th>ເລກຕິດຕາມ</th>
+                                                        <th>ປະເພດສີນຄ້າ</th>
+                                                        <th>ສະຖານະ</th>
+                                                        <th>ມື້ສົ່ງສີນຄ້າ</th>
+                                                        <th>ຊື່ລຸກຄ້າ</th>
+                                                        <th>ເບີໂທລຸກຄ້າ</th>
+                                                        <th>ຊື່ຜູ້ຮັບ</th>
+                                                        <th>ເບີໂທຜູ້ຮັບ</th>
+                                                        <th>ທີ່ຢູ່ຜູ້ຮັບ</th>
+                                                        <th>ເກັບເງີປາຍທາງ</th>
+                                                    </tr>
+                                                </thead>
+                                                <tbody id="tableBody"></tbody>
+                                            </table>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div><!-- .animated -->
+                </div><!-- .content -->
             </div>
-            <div class="modal-footer">
-                <button class="btn btn-primary w-100 mr-5 ml-5" data-dismiss="modal" data-target="#modal1"><i class=""></i> ອອກ</button>
+            <div class="modal fade" role="dialog" id="modal1">
+                <div class="modal-dialog modal-dialog-centered">
+                    <div class="modal-content">
+                        <div class="modal-header"></div>
+                        <div class="modal-body">
+                            <strong>ບໍ່ມີສີນຄ້າຕາມເລກຕິດຕາມດັ່ງກ່າວ</strong>
+                        </div>
+                        <div class="modal-footer">
+                            <button class="btn btn-primary w-100 mr-5 ml-5" data-dismiss="modal" data-target="#modal1"><i class=""></i> ອອກ</button>
+                        </div>
+                    </div>
+                </div>
             </div>
-        </div>
-    </div>
-</div>
-@section scripts{
-    <script>
-        jQuery(document).ready(function () {
-            jQuery('input[name="barcodeText"]').focus();
-            jQuery('input[name="barcodeText"').keypress(function (e) {
-                if (event.which===13) {
-                    jQuery.ajax({
-                        url: "/Admin/ScanBarCodeItemToReturnBack",
-                        data: { itemTrackingNumber: jQuery(this).val() },
-                        datatype: "json",
-                        type: "GET",
-                        success: function (r) {
-                            if (r==="Invalid") {
-                                jQuery("#modal1").modal("show");
-                                jQuery('input[name="barcodeText"]').val("");
-                            }
-                            else {
-                                let money='';
-                                let html = '<tr>';
-                                html += '<td>' + r.TrackingNumber + '</td>';
-                                html += '<td>' + r.ItemName + '</td>';
-                                html += '<td>' + r.Status + '</td>';
-                                html += '<td>' + r.SendingDate + '</td>';
-                                html += '<td>' + r.CustomerName + '</td>';
-                                html += '<td>' + r.CustomerPhonenumber + '</td>';
-                                html += '<td>' + r.ReceiverName + '</td>';
-                                html += '<td>' + r.ReceipverPhone + '</td>';
-                                html += '<td>' + r.ReceiverAddress + '</td>';
+            @section scripts{
+                <script>
+                    jQuery(document).ready(function () {
+                        jQuery('input[name="barcodeText"]').focus();
+                        jQuery('input[name="barcodeText"').keypress(function (e) {
+                            if (e.which === 13) {
+                                jQuery.ajax({
+                                    url: "/Admin/ScanBarCodeItemToReturnBack",
+                                    data: { itemTrackingNumber: jQuery(this).val() },
+                                    datatype: "json",
+                                    type: "GET",
+                                    success: function (r) {
+                                        if (r === "Invalid") {
+                                            jQuery("#modal1").modal("show");
+                                            jQuery('input[name="barcodeText"]').val("");
+                                        }
+                                        else {
+                                            let money = '';
+                                            let html = '<tr>';
+                                            html += '<td>' + r.TrackingNumber + '</td>';
+                                            html += '<td>' + r.ItemName + '</td>';
+                                            html += '<td>' + r.Status + '</td>';
+                                            html += '<td>' + r.SendingDate + '</td>';
+                                            html += '<td>' + r.CustomerName + '</td>';
+                                            html += '<td>' + r.CustomerPhonenumber + '</td>';
+                                            html += '<td>' + r.ReceiverName + '</td>';
+                                            html += '<td>' + r.ReceipverPhone + '</td>';
+                                            html += '<td>' + r.ReceiverAddress + '</td>';
 
-                                if (r.ItemValue_Kip !== null) {
-                                    money += r.ItemValue_Kip + "ກີບ";
-                                }
-                                if (r.ItemValue_Baht!==null) {
-                                    money += r.ItemValue_Baht + "ບາດ";
-                                }
-                                if (r.ItemValue_Dollar !== null) {
-                                    money += r.ItemValue_Dollar + "ໂດລາ";
-                                }
-                                if (r.ItemValue_Kip === null && r.ItemValue_Baht === null && r.ItemValue_Dollar === null) {
-                                    money = "ບໍ່ມີ";
-                                }
-                                html += '<td>' + money + '</td>';
-                                html += '</tr>';
-                                jQuery("#tableBody").append(html);
-                                jQuery('input[name="barcodeText"]').val("");
+                                            if (r.ItemValue_Kip !== null) {
+                                                money += r.ItemValue_Kip + "ກີບ";
+                                            }
+                                            if (r.ItemValue_Baht !== null) {
+                                                money += r.ItemValue_Baht + "ບາດ";
+                                            }
+                                            if (r.ItemValue_Dollar !== null) {
+                                                money += r.ItemValue_Dollar + "ໂດລາ";
+                                            }
+                                            if (r.ItemValue_Kip === null && r.ItemValue_Baht === null && r.ItemValue_Dollar === null) {
+                                                money = "ບໍ່ມີ";
+                                            }
+                                            html += '<td>' + money + '</td>';
+                                            html += '</tr>';
+                                            jQuery("#tableBody").append(html);
+                                            jQuery('input[name="barcodeText"]').val("");
+                                        }
+                                    }
+                                });
                             }
-                        }
+                        });
                     });
-                }
-            });
-        });
 
-    </script>
+                </script>
+            }
+        }
+    }
 }
