--- a/AnousithExpress.web.mvc/Views/Admin/StatisticScanReturn.cshtml
+++ b/AnousithExpress.web.mvc/Views/Admin/StatisticScanReturn.cshtml
@@ -4,116 +4,124 @@
     Layout = "~/Views/Shared/_CustomerLayout.cshtml";
 }
 @model AnousithExpress.DataEntry.ViewModels.Customer.ItemsModel
+@{
+    if (Session["Role"] != null)
+    {
+        if (Session["Role"].ToString() != "1" && Session["Role"].ToString() != "5")
+        {
 
-<div class="breadcrumbs">
-    <div class="col-sm-4">
-        <div class="page-header float-left">
-            <div class="page-title">
-
-            </div>
-        </div>
-    </div>
-    <div class="col-sm-8">
-        <div class="page-header float-right">
-            <div class="page-title">
-                <ol class="breadcrumb text-right">
-                    <li><a href="@Url.Action("Index","Admin")">ຫນ້າຫລັກ</a></li>
-                    <li class="Active">ສະທິຕິສີນຄ້າສົ່ງກັບ</li>
-
-                </ol>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="container" id="containerResize">
-    <div class="content mt-3">
-        <div class="animated fadeIn">
-            <div class="row">
-                <div class="col-md-12">
-                    <div class="card">
-
-                        <div class="card-body ">
-                            <div class="row">
-                                <div class="col-6">
-                                    <label>ຈາກວັນທີສົ່ງ</label>
-                                    @{
-                                        if (ViewBag.fromDate != null)
-                                        {
-                                            <input type="text" value="@ViewBag.fromDate" placeholder="ວັນ-ເດືອນ-ປີ" class="w-100" name="fromDate" readonly="readonly" onchange="searchByDate(this)" />
-
-                                        }
-                                        else
-                                        {
-                                            <input type="text" placeholder="ວັນ-ເດືອນ-ປີ" class="w-100" name="fromDate" readonly="readonly" onchange="searchByDate(this)" />
-
-                                        }
-
-                                    }
-
-
-                                </div>
-                                <div class="col-6 horizontal">
-
-                                    <label>ຫາວັນທີສົ່ງ</label>
-                                    @{
-                                        if (ViewBag.toDate != null)
-                                        {
-                                            <input type="text" value="@ViewBag.toDate" placeholder="ວັນ-ເດືອນ-ປີ" class="w-100" name="toDate" readonly="readonly" onchange="searchByDate(this)" />
-
-                                        }
-                                        else
-                                        {
-                                            <input type="text" placeholder="ວັນ-ເດືອນ-ປີ" class="w-100" name="toDate" readonly="readonly" onchange="searchByDate(this)" />
-
-                                        }
-                                    }
-
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col text-center" style="vertical-align:middle;">
-                                    <table class="table" style="width:75%;margin-left:auto;margin-right:auto">
-                                        <tr>
-                                            <td style="width:50%;">ສີນຄ້າສະແກນສົ່ງກັບທັງຫມົດ</td>
-                                            <td style="width:50%;" id="totalNumberReceive"></td>
-                                        </tr>
-                                        <tr>
-                                            <td style="width:50%;">ສົ່ງສຳເລັດ</td>
-                                            <td style="width:50%;" id="totalNumberSuccess"></td>
-                                        </tr>
-                                    </table>
-                                </div>
-                            </div>
-                            <div class="table-responsive">
-                                <table id="statisticItemReturnDatatabe" class="table table-striped table-bordered" style="width:100%;white-space:nowrap;">
-                                    <thead>
-                                        <tr>
-                                            <th class="control">ເລກຕິດຕາມ</th>
-                                            <th class="control">ປະເພດສີນຄ້າ</th>
-                                            <th class="control">ສະຖານະ</th>
-                                            <th>ຊື່ຜູ້ຮັບ</th>
-                                            <th>ເບີໂທຜູ້ຮັບ</th>
-                                            <th>ທີ່ຢູ່ຜູ້ຮັບ</th>
-                                            <th>ມື້ສະແກນເຂົ້າ</th>
-                                            <th>ມື້ສະແກນອອກ</th>
-                                            <th>ເກັບເງິນປາຍທາງ</th>
-                                            <th class="control">ຝັງຊັ້ນ</th>
-                                        </tr>
-                                    </thead>
-
-                                </table>
-                            </div>
+        }
+        else
+        {
+            <div class="breadcrumbs">
+                <div class="col-sm-4">
+                    <div class="page-header float-left">
+                        <div class="page-title">
 
                         </div>
                     </div>
                 </div>
+                <div class="col-sm-8">
+                    <div class="page-header float-right">
+                        <div class="page-title">
+                            <ol class="breadcrumb text-right">
+                                <li><a href="@Url.Action("Index","Admin")">ຫນ້າຫລັກ</a></li>
+                                <li class="Active">ສະທິຕິສີນຄ້າສົ່ງກັບ</li>
 
+                            </ol>
+                        </div>
+                    </div>
+                </div>
             </div>
-        </div><!-- .animated -->
-    </div>
-</div>
-@section scripts{
-    <script>
+            <div class="container" id="containerResize">
+                <div class="content mt-3">
+                    <div class="animated fadeIn">
+                        <div class="row">
+                            <div class="col-md-12">
+                                <div class="card">
+
+                                    <div class="card-body ">
+                                        <div class="row">
+                                            <div class="col-6">
+                                                <label>ຈາກວັນທີສົ່ງ</label>
+                                                @{
+                                                    if (ViewBag.fromDate != null)
+                                                    {
+                                                        <input type="text" value="@ViewBag.fromDate" placeholder="ວັນ-ເດືອນ-ປີ" class="w-100" name="fromDate" readonly="readonly" onchange="searchByDate(this)" />
+
+                                                    }
+                                                    else
+                                                    {
+                                                        <input type="text" placeholder="ວັນ-ເດືອນ-ປີ" class="w-100" name="fromDate" readonly="readonly" onchange="searchByDate(this)" />
+
+                                                    }
+
+                                                }
+
+
+                                            </div>
+                                            <div class="col-6 horizontal">
+
+                                                <label>ຫາວັນທີສົ່ງ</label>
+                                                @{
+                                                    if (ViewBag.toDate != null)
+                                                    {
+                                                        <input type="text" value="@ViewBag.toDate" placeholder="ວັນ-ເດືອນ-ປີ" class="w-100" name="toDate" readonly="readonly" onchange="searchByDate(this)" />
+
+                                                    }
+                                                    else
+                                                    {
+                                                        <input type="text" placeholder="ວັນ-ເດືອນ-ປີ" class="w-100" name="toDate" readonly="readonly" onchange="searchByDate(this)" />
+
+                                                    }
+                                                }
+
+                                            </div>
+                                        </div>
+                                        <div class="row">
+                                            <div class="col text-center" style="vertical-align:middle;">
+                                                <table class="table" style="width:75%;margin-left:auto;margin-right:auto">
+                                                    <tr>
+                                                        <td style="width:50%;">ສີນຄ້າສະແກນສົ່ງກັບທັງຫມົດ</td>
+                                                        <td style="width:50%;" id="totalNumberReceive"></td>
+                                                    </tr>
+                                                    <tr>
+                                                        <td style="width:50%;">ສົ່ງສຳເລັດ</td>
+                                                        <td style="width:50%;" id="totalNumberSuccess"></td>
+                                                    </tr>
+                                                </table>
+                                            </div>
+                                        </div>
+                                        <div class="table-responsive">
+                                            <table id="statisticItemReturnDatatabe" class="table table-striped table-bordered" style="width:100%;white-space:nowrap;">
+                                                <thead>
+                                                    <tr>
+                                                        <th class="control">ເລກຕິດຕາມ</th>
+                                                        <th class="control">ປະເພດສີນຄ້າ</th>
+                                                        <th class="control">ສະຖານະ</th>
+                                                        <th>ຊື່ຜູ້ຮັບ</th>
+                                                        <th>ເບີໂທຜູ້ຮັບ</th>
+                                                        <th>ທີ່ຢູ່ຜູ້ຮັບ</th>
+                                                        <th>ມື້ສະແກນເຂົ້າ</th>
+                                                        <th>ມື້ສະແກນອອກ</th>
+                                                        <th>ເກັບເງິນປາຍທາງ</th>
+                                                        <th class="control">ຝັງຊັ້ນ</th>
+                                                    </tr>
+                                                </thead>
+
+                                            </table>
+                                        </div>
+
+                                    </div>
+                                </div>
+                            </div>
+
+                        </div>
+                    </div><!-- .animated -->
+                </div>
+            </div>
+            @section scripts{
+                <script>
     var statisticItemReturnTable;
     jQuery(document).ready(
         function () {
@@ -216,6 +224,10 @@
 
     }
 
-    </script>
+                </script>
+            }
+
+        }
+    }
 }
 
