--- a/AnousithExpress.web.mvc/Views/Customer/Consolidation.cshtml
+++ b/AnousithExpress.web.mvc/Views/Customer/Consolidation.cshtml
@@ -53,6 +53,9 @@
                                         <th>ຈຳນວນສີນຄ້າ</th>
                                         <th>ວັນທີສັງລວມ</th>
                                         <th>ຄ່າບໍລິການ</th>
+                                        <th>ຂໍການຢືນຢັນ</th>
+                                        <th>ລຸກຄ້າຢືນຢັນ</th>
+                                        <th>ໂອນເງີນແລ້ວ</th>
                                         <th></th>
                                     </tr>
                                 </thead>
@@ -114,6 +117,36 @@
                     { data: "AmountOfItem", name: "AmountOfItem" },
                     { data: "ConsolidatedDate", name: "ConsolidatedDate" },
                     { data: "Fee", name: "Fee" },
+                    {
+                        data: "needConfirm", render: function (data, type, full, meta) {
+                            if (data === true) {
+                                return 'ຂໍ';
+                            }
+                            else {
+                                return 'ບໍ່ຂໍ';
+                            }
+                        }
+                    },
+                    {
+                        data: "isCustomerConfirmed", render: function (data, type, full, meta) {
+                            if (data === true) {
+                                return 'ຢືນຢັນ';
+                            }
+                            else {
+                                return 'ຢັງບໍ່ໄດ້ຢືນຢັນ';
+                            }
+                        }
+                    },
+                    {
+                        data: "isBalanceTransfer", render: function (data, type, full, meta) {
+                            if (data === true) {
+                                return 'ໂອນແລ້ວ';
+                            }
+                            else {
+                                return 'ຍັງບໍ່ໄດ້ໂອນ';
+                            }
+                        }
+                    },
                     {
                         data: "Id", render: function (data,type,full,meta) {
                             return '<button class="btn btn-warning btn-sm" onclick="openDetail('+data+')">ລາຍລະອຽດ</button>';
