--- a/AnousithExpress.web.mvc/Views/Customer/ProfileUpdate.cshtml
+++ b/AnousithExpress.web.mvc/Views/Customer/ProfileUpdate.cshtml
@@ -65,10 +65,10 @@
                                     @Html.TextBoxFor(m => m.BCEL_Dollar, new { @class = "form-control", @placeholder = "ເລກບັນຊີ" })
                                 </div>
                                 <div class="card-footer text-center">
-                                    <button type="button" onclick="updateDetail()" class="btn btn-warning col-sm-5 mb-1">
+                                    <button type="button" onclick="updateDetail()" class="btn btn-danger col-sm-5 mb-1">
                                         <i class="fa fa-dot-circle-o"></i> ປ່ຽນແປງ
                                     </button>
-                                    <button type="button" onclick='window.location = "@Url.Action("Index","Customer")"' class="btn btn-info  col-sm-5 mb-1">
+                                    <button type="button" onclick='window.location = "@Url.Action("Index","Customer")"' class="btn btn-danger  col-sm-5 mb-1">
                                         <i class="fa fa-backward"></i> ກັບໄປຫນ້າຫລັກ
                                     </button>
                                 </div>
