--- a/AnousithExpress.web.mvc/Views/Delivery/Index.cshtml
+++ b/AnousithExpress.web.mvc/Views/Delivery/Index.cshtml
@@ -27,7 +27,7 @@
         <div class="animated">
             <a href="@Url.Action("ItemsToPickUp","Delivery")">
                 <div class="col-sm-6 col-lg-3">
-                    <div class="card text-white bg-flat-color-1">
+                    <div class="card text-white bg-danger">
                         <div class="card-body pb-0">
                             <div class="dropdown float-right">
                                 <i class="fa fa-cog"></i>
@@ -42,7 +42,7 @@
             </a>
             <a href="@Url.Action("ItemsToSent","Delivery")">
                 <div class="col-sm-6 col-lg-3">
-                    <div class="card text-white bg-flat-color-2">
+                    <div class="card text-white bg-danger">
                         <div class="card-body pb-0">
                             <div class="dropdown float-right">
                                 <i class="fa fa-cog"></i>
@@ -57,7 +57,7 @@
             </a>
             <a href="@Url.Action("ULogout","Account")">
                 <div class="col-sm-6 col-lg-3">
-                    <div class="card text-white bg-flat-color-2">
+                    <div class="card text-white bg-danger">
                         <div class="card-body pb-0">
                             <div class="dropdown float-right">
                                 <i class="fa fa-cog"></i>
